          ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

25 Nov 2014 Makoto Asai (hadr-deex-V10-00-25)
----------------------------------------------------------
- G4NuclearLevelManager - remove unnecessary data members to reduce
  the memory consumption.

21 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-24)
----------------------------------------------------------
- G4ContinuumGammaTransition, G4ContinuumGammaDeexcitation,
  G4DiscreteGammaDeexcitation, G4DiscreteGammaTransition,
  G4VGammaDeexcitation - cleanup selection of continues or discrete 
    transition
- G4FermiFragmentPool further cleanup values of excitations
- G4ExcitationHandler - added Description for documentation
- GEN probabilities - verified and level energies using gamma
    level data
- G4PhotonEvaporation - improved computation of probability

20 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-23)
----------------------------------------------------------
- G4NuclearLevelStore Makoto Asai redesign the class to enshure that
    the same level is not uploaded twice running in MT mode 
- G4FermiFragmentsPool - added DumpFragment() and Dump() methods
- G4VEvaporationChannel, G4GEMChannel, G4GEMProbability - added Dump()
    method
- G4NuclearLevelManager, G4NuclearLevel - added DumpLevels() method
- G4ContinuumGammaTransition, G4VGammaDeexcitation - coherently use
    the same energy tolarence 2 keV

17 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-22)
----------------------------------------------------------
- G4ContinuumGammaTransition - removed normC factor which has no effect
    (return to 10.0 algorithm)
- G4FermiFragmentPool - fixed memory leak at destruction; fixed energy