@@ -74,7 +74,7 @@
 #include "G4Pow.hh"
 #include "G4Log.hh"
 
-//static const G4double tolerance = 10*CLHEP::keV;
+static const G4double tolerance = 10*CLHEP::keV;
 
 G4DiscreteGammaTransition::G4DiscreteGammaTransition(
   const G4NuclearLevel* level, G4int Z, G4int verb)
@@ -183,7 +183,9 @@ void G4DiscreteGammaTransition::SelectGamma()
 	    { iShell = 7;}
 	  else if ( random <= (aLevel->M5ConvertionProbabilities())[iGamma]) 
 	    { iShell = 8;}
-	  // the following is needed to match the ishell to that used in  G4AtomicShells
+	  // the following is needed to match the ishell to that used in  
+	  // G4AtomicShells
+	  /*
 	  if ( iShell == 9) {
 	    if ( (nucleusZ < 28) && (nucleusZ > 20)) {
 	      iShell--;
@@ -191,6 +193,7 @@ void G4DiscreteGammaTransition::SelectGamma()
 	      iShell = iShell -2;
 	    }
 	  }
+	  */
 	  //L.Desorgher 02/11/2011
 	  //Atomic shell information is available in Geant4 only up top Z=100
 	  //To extend the photo evaporation code to Z>100  the call 
@@ -206,13 +209,13 @@ void G4DiscreteGammaTransition::SelectGamma()
 		   << " keV " << G4endl;
 	  }
 
-	  // 09.05.2010 VI : it is an error - cannot subtract bond energy from 
-	  //                 transition energy here
-	  //gammaEnergy = gammaEnergy - bondE; 
+	  // last check on energy
+	  if(gammaEnergy >  bondE + tolerance) {
+	    orbitE = iShell;	  
+	    aGamma = false ;   // emitted is not a gamma now 
+	    gammaEnergy -= bondE; 
+	  }
 	  //G4cout << "gammaEnergy = " << gammaEnergy << G4endl;
-
-	  orbitE = iShell;	  
-	  aGamma = false ;   // emitted is not a gamma now 
 	}
     }
       
